--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --color --open",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "dist": "npm run lint && npm run build",
-    "lint": "./node_modules/.bin/eslint --ext .js,.vue src test/*.js",
-    "test": "./node_modules/.bin/jest --coverage"
+    "lint": "./node_modules/.bin/eslint --ext .js,.vue src test/*.js"
   },
   "homepage": "https://github.com/mazipan/awesome-vue-list/",
   "repository": {
@@ -22,25 +21,22 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "avoriaz": "^4.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "eslint": "^4.6.1",
+    "eslint": "^4.9.0",
     "eslint-plugin-vue": "3.13.0",
-    "file-loader": "^0.11.2",
-    "jest": "^21.1.0",
-    "jest-vue-preprocessor": "^1.1.0",
+    "file-loader": "^1.1.5",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "vue": "^2.4.4",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "vue": "^2.5.2",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.2"
   },
   "babel": {
     "presets": [
@@ -59,20 +55,5 @@
     "config/*.js",
     "dist",
     "node_modules"
-  ],
-  "jest": {
-    "coverageDirectory": "test/coverage",
-    "moduleNameMapper": {
-      "^vue$": "vue/dist/vue.common.js",
-      "src/([^\\.]*)$": "<rootDir>/src/$1.vue"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/jest-vue-preprocessor"
-    }
-  }
+  ]
 }
