--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awesome-vue-list",
-  "description": "A curated list of awesome things related to Vue.js base on awesome-vue repository",
+  "description": "A curated list of awesome things related to Vue.js based on awesome-vue repository",
   "version": "0.0.1",
   "license": "MIT",
   "author": "Irfan Maulana (https://github.com/mazipan/)",
